--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node dist/server.js"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
@@ -19,6 +18,7 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.4"
+    "mongodb": "^3.6.4",
+    "dotenv": "^8.2.0"
   }
 }
