--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/server.js"
+    "start": "yarn tsc -p tsconfig.json && node dist/server.js"
   },
   "devDependencies": {
     "ts-node-dev": "^1.1.1",
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.10",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/mongodb": "^3.6.6",
     "bcrypt": "^5.0.0",
